# zksync-experiments

./: .gitignore  Dockerfile  README.md  docker.md  environment.yml  generate_csv.py  increase_domain.md  requirements.txt  script_docker.sh  script_prajna.sh
zksync-airbender/tools/cli/src/: main.rs  prover_utils.rs
zksync-airbender/tools/verifier/: build.sh
zksync-airbender/tools/verifier/src/: main.rs
zksync-os/: _typos.toml  deny.toml
zksync-os/basic_bootloader/src/bootloader/: config.rs  gas_helpers.rs  result_keeper.rs  supported_ees.rs
zksync-os/basic_system/: account_proofs.json  difftrace.json
zksync-os/basic_system/src/system_functions/: bn254_ecadd.rs  ripemd160.rs  sha256.rs
zksync-os/docs/bootloader/: runner_flow.md  transaction_processing.md
zksync-os/docs/execution_environments/: execution_environments.md
zksync-os/evm_interpreter/src/: errors.rs  evm_stack.rs  gas.rs  opcodes.rs
zksync-os/evm_interpreter/src/instructions/: heap.rs  (+3 more)
zksync-os/oracle_provider/: Cargo.toml
zksync-os/supporting_crates/delegated_u256/: Cargo.toml
zksync-os/supporting_crates/solidity_abi/: Cargo.toml
zksync-os/supporting_crates/u256/: Cargo.toml
zksync-os/supporting_crates/u256/src/: lib.rs
zksync-os/supporting_crates/u256/src/naive/: mod.rs
zksync-os/supporting_crates/u256/src/risc_v/: mod.rs
zksync-os/tests/binary_checker/: Cargo.toml
zksync-os/tests/evm_tester/: .gitignore
zksync-os/tests/fuzzer/: README.md  markers.bench
zksync-os/zksync_os/: .gitignore
zksync-os/zksync_os/.cargo/: config.toml
zksync-os/zksync_os_runner/: Cargo.toml
(+127 files in other folders)
