[package]
name = "u256"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
ruint = { version = "1.14", default-features = false }
delegated_u256 = { path = "../delegated_u256" }
serde = { version = "1.0", default-features = false, features = ["derive"] }

[features]
serde = ["ruint/serde", "delegated_u256/serde"]
delegation = []

[dev-dependencies]
proptest = "1.7.0"
